force-app/main/default/objects/Parceiros_e_Vendedores__c/Parceiros_e_Vendedores__c.object-meta.xml
<CustomObject>
    <label>Parceiros e Vendedores</label>
    <nameField>
        <displayFormat>P-{0000}</displayFormat>
        <label>Nome de Parceiros e Vendedores</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Parceiros e Vendedores</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>