force-app/main/default/objects/Parceiros_e_Vendedores__c/fields/Cupom__c.field-meta.xml
<CustomField>
    <fullName>Cupom__c</fullName>
    <label>Cupom</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>