force-app/main/default/objects/Parceiros_e_Vendedores__c/fields/Empresa__c.field-meta.xml
<CustomField>
    <fullName>Empresa__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Empresa</label>
    <referenceTo>Company__c</referenceTo>
    <relationshipLabel>Parceiros e Vendedores</relationshipLabel>
    <relationshipName>Parceiros_e_Vendedores</relationshipName>
    <type>Lookup</type>
</CustomField>