force-app/main/default/objects/Parceiros_e_Vendedores__c/fields/Empresa_Parceira__c.field-meta.xml
<CustomField>
    <fullName>Empresa_Parceira__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Empresa Parceira</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Parceiro</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Parceiros e Vendedores</relationshipLabel>
    <relationshipName>Parceiros_e_Vendedores</relationshipName>
    <type>Lookup</type>
</CustomField>