force-app/main/default/objects/Parceiros_e_Vendedores__c/fields/Nome_Vendedor__c.field-meta.xml
<CustomField>
    <fullName>Nome_Vendedor__c</fullName>
    <label>Nome Vendedor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>