force-app/main/default/objects/Parceiros_e_Vendedores__c/fields/Parceiro__c.field-meta.xml
<CustomField>
    <fullName>Parceiro__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Líder Imediato</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>User.Contact.AccountId</field>
            <operation>equals</operation>
            <valueField>$Source.Empresa_Parceira__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Parceiros_e_Vendedores</relationshipName>
    <type>Lookup</type>
</CustomField>