force-app/main/default/objects/Parceiros_e_Vendedores__c/fields/Vendedor__c.field-meta.xml
<CustomField>
    <fullName>Vendedor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vendedor</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Parceiros_e_Vendedores1</relationshipName>
    <type>Lookup</type>
</CustomField>