force-app/main/default/objects/Parceiros_e_Vendedores__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Parceiro__c</columns>
    <columns>Nome_Vendedor__c</columns>
    <columns>Cupom__c</columns>
    <columns>Empresa__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>Tudo</label>
</ListView>